# Tactiled

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
cmake/: Utilities.cmake
doxygen/: main_page.md
include/: animation.hpp  chunk.hpp  color.hpp  data.hpp  dummy.h  frame.hpp  grid.hpp  image_layer.hpp  layer.hpp  map.hpp  object.hpp  object_group.hpp  point.hpp  properties.hpp  property.hpp  step.h  step.hpp  step_animation.h  step_animation.hpp  step_api.h  step_api.hpp  step_cfg.h  step_chunk.h  step_chunk.hpp  step_color.h  step_color.hpp  step_data.h  step_data.hpp  step_exception.h  step_exception.hpp  step_frame.h  step_frame.hpp  step_fwd.hpp  step_grid.h  step_grid.hpp  step_group.h  step_group.hpp  step_image_layer.h  step_image_layer.hpp  step_layer.h  (+59 more)
include/lib/namedtype/: crtp.hpp  named_type.hpp  named_type_impl.hpp  underlying_functionalities.hpp
include/step/: step.hpp
scripts/: config.json
src/: CMakeLists.txt  step.cpp  step_animation.cpp  step_chunk.cpp  step_color.cpp  step_data.cpp  step_frame.cpp  step_grid.cpp  step_group.cpp  step_image_layer.cpp  step_layer.cpp  step_map.cpp  step_object.cpp  step_object_group.cpp  step_point.cpp  step_properties.cpp  step_property.cpp  step_terrain.cpp  step_text.cpp  step_tile.cpp  step_tile_layer.cpp  step_tile_offset.cpp  step_tile_parser.cpp  step_tileset.cpp  step_utils.cpp  step_wang_color.cpp  step_wang_set.cpp  step_wang_tile.cpp  tactiled_color.cpp  tactiled_map.cpp  tactiled_point.cpp  tactiled_property.cpp  tactiled_utils.cpp  tiled_map.cpp
src/step/: animation.hpp  chunk.hpp  color.hpp  common.hpp  data.hpp  detail.hpp  error.hpp  frame.hpp  grid.hpp  image_layer.hpp  layer.hpp  map.hpp  object.hpp  object_group.hpp  point.hpp  properties.hpp  property.hpp  step.hpp  step_api.hpp  step_detail.hpp  step_exception.hpp  step_fwd.hpp  terrain.hpp  text.hpp  tile.hpp  tile_layer.hpp  tile_offset.hpp  tileset.hpp  types.hpp  utils.hpp  valid_property.hpp  wang_color.hpp  wang_set.hpp  wang_tile.hpp
test/: CMakeLists.txt
test/resource/: point_invalid.json  property.json  property_valid.json
test/resource/animation/: animation_valid.json
test/resource/chunk/: chunk_base64.json  chunk_csv.json
test/resource/data/: base64.json
test/resource/frame/: frame_complete.json
test/resource/grid/: isometric.json  orthogonal.json
test/resource/layer/: chunks.json  group.json  image_layer.json  image_layer_min.json  object_group.json  object_group_min.json  tile_layer.json  tile_layer_min.json
test/resource/map/: basic_map.json  embedded_tileset.json  external_tileset.json  map.json  map_embedded_tilesets.json  map_external_tilesets.json  map_with_bunch_of_contents.json  no_type.json  outside.json  terrain.json  tileset_for_map_with_bunch_of_contents.json
test/resource/object/: ellipse.json  object.json  point.json  polygon.json  polyline.json  rectangle.json  template.json  template_object.json  text.json
test/resource/point/: point_valid.json
test/resource/properties/: properties.json
test/resource/property/: bool.json  bool_property_bad_value.json  color.json  color_property_bad_value.json  color_property_valid.json  double.json  file_property_bad_value.json  file_property_valid.json  float_property_bad_value.json  int.json  int_property_bad_value.json  object_property_bad_value.json  object_property_valid.json  property_bad_name.json  string.json  string_property_bad_value.json
test/resource/real/: map.json  outside.json  terrain.json
test/resource/terrain/: complete.json  no_properties.json
test/resource/text/: text_all_keys.json  text_minimum.json
test/resource/tile/: tile_all_keys.json  tile_complete.json
test/resource/tileoffset/: tile_offset.json
test/resource/tileset/: embedded_tileset.json  embedded_tileset_no_gid.json  external_tileset.json  grid_test.json  map_embedded_tileset.json  tileset_wrong_type.json  with_properties.json  with_tiles.json
test/resource/wangcolor/: valid.json
test/resource/wangset/: valid.json
test/resource/wangtile/: valid.json
test/unit/: CMakeLists.txt  property_test.cpp
test/unittest/: step_animation_test.cpp  step_chunk_test.cpp  step_color_test.cpp  step_data_test.cpp  step_frame_test.cpp  step_grid_test.cpp  step_layer_test.cpp  step_map_test.cpp  step_object_test.cpp  step_point_test.cpp  step_properties_test.cpp  step_property_test.cpp  step_terrain_test.cpp  step_test.cpp  step_test_utils.h  step_text_test.cpp  step_tile_offset_test.cpp  step_tile_test.cpp  step_tileset_test.cpp  step_utils_test.cpp  step_wang_color_test.cpp  step_wang_set_test.cpp  step_wang_tile_test.cpp  tactiled_color_test.cpp  tactiled_map_test.cpp  tactiled_point_test.cpp  tactiled_property_test.cpp  tactiled_utils_test.cpp  test_main.cpp  tiled_map_test.cpp  tiled_map_test.h
